fixed small screen nav, now aligns horizontally in center

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,5 +17,7 @@
 @import "bootstrap";
 
 // nav
-
+.nav-link, .fa {
+  display: inline;
+}
 // end nav
